crates/locus-core/tests/snapshots/regression_icra2020__icra_forward_pure_tags_images_soft.snap
---
source: crates/locus-core/tests/regression_icra2020.rs
expression: report
---
summary:
  dataset_size: 50
  mean_recall: 0.0028571428571428576
  mean_rmse: 8.5634
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: 0005.png
      missed: 154
      extra: 61
      rmse: 0
    - filename: 0008.png
      missed: 154
      extra: 55
      rmse: 0
    - filename: 0009.png
      missed: 154
      extra: 45
      rmse: 0
    - filename: 0010.png
      missed: 154
      extra: 41
      rmse: 0
    - filename: 0013.png
      missed: 154
      extra: 41
      rmse: 0
