crates/locus-core/tests/snapshots/regression_icra2020__icra_forward_sample10.snap
---
source: crates/locus-core/tests/regression_icra2020.rs
expression: report
---
summary:
  dataset_size: 5
  mean_recall: 0.6493506493506493
  mean_rmse: 0.2813446175065445
  mean_total_ms: 126.8418782
entries:
  0000.png:
    recall: 0.032467532467532464
    avg_rmse: 0.20529131504224588
    stats:
      threshold_ms: "[latency]"
      segmentation_ms: "[latency]"
      quad_extraction_ms: "[latency]"
      decoding_ms: "[latency]"
      total_ms: "[latency]"
      num_candidates: 563
      num_detections: 5
    detected_ids:
      - 30
      - 50
      - 116
      - 125
      - 129
  0010.png:
    recall: 0.3181818181818182
    avg_rmse: 0.36913896290989706
    stats:
      threshold_ms: "[latency]"
      segmentation_ms: "[latency]"
      quad_extraction_ms: "[latency]"
      decoding_ms: "[latency]"
      total_ms: "[latency]"
      num_candidates: 587
      num_detections: 50
    detected_ids:
      - 4
      - 7
      - 9
      - 12
      - 17
      - 26
      - 27
      - 28
      - 30
      - 32
      - 35
      - 36
      - 37
      - 40
      - 41
      - 42
      - 43
      - 44
      - 55
      - 63
      - 73
      - 76
      - 82
      - 89
      - 96
      - 98
      - 99
      - 103
      - 104
      - 105
      - 106
      - 109
      - 112
      - 121
      - 124
      - 132
      - 133
      - 138
      - 141
      - 144
      - 147
      - 148
      - 149
      - 150
      - 152
      - 154
      - 155
      - 156
      - 158
  0020.png:
    recall: 0.8961038961038961
    avg_rmse: 0.34257382260544145
    stats:
      threshold_ms: "[latency]"
      segmentation_ms: "[latency]"
      quad_extraction_ms: "[latency]"
      decoding_ms: "[latency]"
      total_ms: "[latency]"
      num_candidates: 584
      num_detections: 138
    detected_ids:
      - 0
      - 1
      - 2
      - 3
      - 4
      - 5
      - 6
      - 7
      - 8
      - 9
      - 10
      - 11
      - 12
      - 13
      - 14
      - 15
      - 16
      - 17
      - 18
      - 19
      - 20
      - 21
      - 23
      - 25
      - 26
      - 27
      - 28
      - 29
      - 30
      - 31
      - 32
      - 34
      - 35
      - 36
      - 37
      - 38
      - 39
      - 40
      - 41
      - 42
      - 43
      - 44
      - 46
      - 48
      - 49
      - 51
      - 52
      - 53
      - 54
      - 55
      - 57
      - 60
      - 61
      - 62
      - 64
      - 66
      - 69
      - 71
      - 72
      - 73
      - 74
      - 75
      - 76
      - 77
      - 78
      - 79
      - 80
      - 81
      - 82
      - 83
      - 84
      - 85
      - 86
      - 87
      - 88
      - 89
      - 90
      - 92
      - 93
      - 94
      - 95
      - 96
      - 97
      - 98
      - 99
      - 100
      - 101
      - 102
      - 103
      - 104
      - 105
      - 106
      - 107
      - 108
      - 109
      - 110
      - 111
      - 112
      - 113
      - 115
      - 117
      - 118
      - 120
      - 121
      - 122
      - 123
      - 124
      - 125
      - 126
      - 127
      - 128
      - 129
      - 130
      - 131
      - 132
      - 133
      - 134
      - 136
      - 138
      - 139
      - 141
      - 142
      - 143
      - 144
      - 145
      - 146
      - 147
      - 148
      - 149
      - 150
      - 151
      - 152
      - 153
      - 155
      - 156
      - 157
      - 158
      - 159
  0030.png:
    recall: 1
    avg_rmse: 0.28405923856754833
    stats:
      threshold_ms: "[latency]"
      segmentation_ms: "[latency]"
      quad_extraction_ms: "[latency]"
      decoding_ms: "[latency]"
      total_ms: "[latency]"
      num_candidates: 549
      num_detections: 154
    detected_ids:
      - 0
      - 1
      - 2
      - 3
      - 4
      - 5
      - 6
      - 7
      - 8
      - 9
      - 10
      - 11
      - 12
      - 13
      - 14
      - 15
      - 16
      - 17
      - 18
      - 19
      - 20
      - 21
      - 23
      - 24
      - 25
      - 26
      - 27
      - 28
      - 29
      - 30
      - 31
      - 32
      - 33
      - 34
      - 35
      - 36
      - 37
      - 38
      - 39
      - 40
      - 41
      - 42
      - 43
      - 44
      - 46
      - 47
      - 48
      - 49
      - 50
      - 51
      - 52
      - 53
      - 54
      - 55
      - 56
      - 57
      - 58
      - 59
      - 60
      - 61
      - 62
      - 63
      - 64
      - 65
      - 66
      - 67
      - 69
      - 70
      - 71
      - 72
      - 73
      - 74
      - 75
      - 76
      - 77
      - 78
      - 79
      - 80
      - 81
      - 82
      - 83
      - 84
      - 85
      - 86
      - 87
      - 88
      - 89
      - 90
      - 92
      - 93
      - 94
      - 95
      - 96
      - 97
      - 98
      - 99
      - 100
      - 101
      - 102
      - 103
      - 104
      - 105
      - 106
      - 107
      - 108
      - 109
      - 110
      - 111
      - 112
      - 113
      - 115
      - 116
      - 117
      - 118
      - 119
      - 120
      - 121
      - 122
      - 123
      - 124
      - 125
      - 126
      - 127
      - 128
      - 129
      - 130
      - 131
      - 132
      - 133
      - 134
      - 135
      - 136
      - 138
      - 139
      - 140
      - 141
      - 142
      - 143
      - 144
      - 145
      - 146
      - 147
      - 148
      - 149
      - 150
      - 151
      - 152
      - 153
      - 154
      - 155
      - 156
      - 157
      - 158
      - 159
  0040.png:
    recall: 1
    avg_rmse: 0.2056597484075896
    stats:
      threshold_ms: "[latency]"
      segmentation_ms: "[latency]"
      quad_extraction_ms: "[latency]"
      decoding_ms: "[latency]"
      total_ms: "[latency]"
      num_candidates: 569
      num_detections: 154
    detected_ids:
      - 0
      - 1
      - 2
      - 3
      - 4
      - 5
      - 6
      - 7
      - 8
      - 9
      - 10
      - 11
      - 12
      - 13
      - 14
      - 15
      - 16
      - 17
      - 18
      - 19
      - 20
      - 21
      - 23
      - 24
      - 25
      - 26
      - 27
      - 28
      - 29
      - 30
      - 31
      - 32
      - 33
      - 34
      - 35
      - 36
      - 37
      - 38
      - 39
      - 40
      - 41
      - 42
      - 43
      - 44
      - 46
      - 47
      - 48
      - 49
      - 50
      - 51
      - 52
      - 53
      - 54
      - 55
      - 56
      - 57
      - 58
      - 59
      - 60
      - 61
      - 62
      - 63
      - 64
      - 65
      - 66
      - 67
      - 69
      - 70
      - 71
      - 72
      - 73
      - 74
      - 75
      - 76
      - 77
      - 78
      - 79
      - 80
      - 81
      - 82
      - 83
      - 84
      - 85
      - 86
      - 87
      - 88
      - 89
      - 90
      - 92
      - 93
      - 94
      - 95
      - 96
      - 97
      - 98
      - 99
      - 100
      - 101
      - 102
      - 103
      - 104
      - 105
      - 106
      - 107
      - 108
      - 109
      - 110
      - 111
      - 112
      - 113
      - 115
      - 116
      - 117
      - 118
      - 119
      - 120
      - 121
      - 122
      - 123
      - 124
      - 125
      - 126
      - 127
      - 128
      - 129
      - 130
      - 131
      - 132
      - 133
      - 134
      - 135
      - 136
      - 138
      - 139
      - 140
      - 141
      - 142
      - 143
      - 144
      - 145
      - 146
      - 147
      - 148
      - 149
      - 150
      - 151
      - 152
      - 153
      - 154
      - 155
      - 156
      - 157
      - 158
      - 159
