crates/locus-core/tests/snapshots/regression_icra2020__icra_forward_synthetic_aggressive.snap
---
source: crates/locus-core/tests/regression_icra2020.rs
expression: report
---
summary:
  dataset_size: 50
  mean_recall: 0.9402597402597402
  mean_rmse: 0.3447
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: 0000.png
      missed: 62
      extra: 22
      rmse: 0.8383
    - filename: 0001.png
      missed: 62
      extra: 21
      rmse: 0.6579
    - filename: 0002.png
      missed: 58
      extra: 18
      rmse: 0.4634
    - filename: 0004.png
      missed: 54
      extra: 23
      rmse: 0.4367
    - filename: 0003.png
      missed: 49
      extra: 21
      rmse: 0.6826
