crates/locus-core/tests/snapshots/regression_icra2020__icra_random_checkerboard_corners_images.snap
---
source: crates/locus-core/tests/regression_icra2020.rs
expression: report
---
summary:
  dataset_size: 400
  mean_recall: 0.8980817550990197
  mean_rmse: 0.7416
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: 0126.png
      missed: 38
      extra: 0
      rmse: 0.824
    - filename: 0040.png
      missed: 37
      extra: 0
      rmse: 1.1096
    - filename: 0010.png
      missed: 34
      extra: 0
      rmse: 0.63
    - filename: 0043.png
      missed: 32
      extra: 0
      rmse: 1.0096
    - filename: 0172.png
      missed: 32
      extra: 0
      rmse: 0.9215
