crates/locus-core/tests/snapshots/regression_icra2020__icra_random_pure_tags_images.snap
---
source: crates/locus-core/tests/regression_icra2020.rs
expression: report
---
summary:
  dataset_size: 400
  mean_recall: 0.9537702959573809
  mean_rmse: 0.7652
  mean_total_ms: "[DURATION]"
  worst_offenders:
    - filename: 0394.png
      missed: 16
      extra: 0
      rmse: 1.0347
    - filename: 0298.png
      missed: 15
      extra: 0
      rmse: 0.4708
    - filename: 0344.png
      missed: 13
      extra: 0
      rmse: 2.1229
    - filename: 0179.png
      missed: 12
      extra: 0
      rmse: 2.6526
    - filename: 0121.png
      missed: 12
      extra: 0
      rmse: 1.1982
